--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -67,19 +67,22 @@
                 <div class="card text-center bg-light mb-4">
                     <img class="card-img-top" src="@item.image_link" style="height:200px;width:200px;align-self:center;" />
                     <div class="card-header">
-                        <h5 class="card-title">@item.name</h5>
+                        <h5 class="card-title"><b>Produto:</b> @item.name</h5>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">@item.brand</h5>
-                        <p class="card-text">@item.price</p>
-                        <p class="card-text">@item.category</p>
-                        <p class="card-text">
+                        <h5 class="card-title"><b>Marca:</b> @item.brand</h5>
+                        <p class="card-text"><b>Preço:</b> @item.price</p>
+                        <p class="card-text"><b>Categoria:</b> @item.category</p>
+                        <p class="card-text"><b>Tags:</b>
                             @for (int i = 0; i < item.tag_list.Count; i++)
                             {
                                 @Html.DisplayFor(modelItem => item.tag_list[i])
                             }
                         </p>
-                        <p><a class="btn btn-primary btn-sm" asp-page="./Details" asp-route-id="@item.id">Detalhar</a></p>
+                        <p>
+                            <a class="btn btn-primary btn-sm" asp-page="/Details" asp-route-id="@item.id">Detalhar</a>
+                           
+                        </p>
                     </div>
                 </div>
 
